# ebm-policy-best-of-n

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CODEX_HANDOFF.md  benchmark_plan.md  claims.md  differentiation_from_wam_jepa_diffusion.md  final_audit.md  reviewer_attacks.md  theory.md
experiments/: __init__.py  run_action_optimization_budget.py  run_calibration_ablation.py  run_controlled_energy_tail.py  run_exact_law_validation.py  run_learned_ibc_policy.py  run_learned_torch_ibc.py  run_metaworld_benchmark.py  run_multimodal_action_energy.py  run_optional_benchmarks.py  run_repair_and_gates.py  v3_cached_evidence.py  v4_frozen_evidence.py
paper/: abstract.md  checklist.md  experiments.md  intro.md  limitations.md  method.md  outline.md  related_work.md  theory.md
paper/final/: ebm-policy-best-of-n-v4-manifest.json
paper/iclr2026/: appendix.tex  main.tex  refs.bib  v3_results_macros.tex  v4_results_macros.tex
results/: claim_stress_audit.json  claims_status.json  claims_status.md
results/ablations/: seed_level.csv  summary.csv  summary.json
results/controlled_energy_tail/: seed_level.csv  summary.csv  summary.json
scripts/: build_iclr_paper.ps1  build_v3_paper.py  build_v4_paper.py  claim_audit.py  run_all.sh  run_claim_audit.sh  run_figures.py  run_figures.sh  run_smoke.sh  run_v3_claim_audit.py  run_v4_claim_audit.py
tests/: test_artifact_schemas.py  test_best_of_n.py  test_calibration.py  test_diagnostics.py  test_energy_conventions.py  test_reproducibility.py  test_tail_selection.py  test_torch_models.py
(+98 files in other folders)
