[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ebm-policy-best-of-n"
version = "0.1.0"
description = "Inference-value laws and tail calibration diagnostics for energy-based robot policies."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7"]
neural = ["torch>=2.0"]
benchmark = ["gymnasium>=1.0", "mujoco>=3.0", "metaworld"]
all = ["pytest>=7", "torch>=2.0", "gymnasium>=1.0", "mujoco>=3.0", "metaworld"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
